--- a/service_koa/package.json
+++ b/service_koa/package.json
@@ -10,8 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
     "koa-router": "^9.4.0",
     "node-fetch": "^2.6.1",
     "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "mysql2": "^2.1.0"
   }
 }
